<resources>
    <string name="app_name">Grocery Store</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">or</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="search">Search</string>
    <string name="groceries">Groceries</string>
    <string name="my_cart">My Cart</string>
    <string name="payment">Payment</string>
    <string name="history_items">Cart History</string>
    <string name="no_item_in_cart">No item in cart!</string>
    <string name="amount_in_rupee">₹ %s</string>
    <string name="payment_processing">Payment Processing!</string>
    <string name="payment_completing">Payment completing in %s seconds</string>
    <string name="payment_done">Payment Done!</string>
    <string name="history">History</string>
    <string name="image">image</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="checkout">Checkout</string>
    <string name="checkout_items">Checkout Items</string>
    <string name="total_items">Total Items</string>
    <string name="total_items_history">Total Item: </string>
    <string name="total_price">Total Price</string>
    <string name="gst">GST</string>
    <string name="go_to_payment">Go to Payment</string>
    <string name="amount_to_be_paid">Amount to be paid</string>
    <string name="total_amount">Total amount</string>
    <string name="click_to_pay">Click to pay</string>
    <string name="click_the_below_button_to_start_payment">Click the below button to start payment</string>
    <string name="no_history_found">No history found!</string>
</resources>