<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.grocery_store.ui.login_signup.LoginFragment"
        android:label=""
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_loginFragment_to_dashboardScreen"
            app:destination="@id/dashboardScreen" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.grocery_store.ui.login_signup.SignUpFragment"
        android:label=""
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_dashboardScreen"
            app:destination="@id/dashboardScreen" />
    </fragment>
    <fragment
        android:id="@+id/dashboardScreen"
        android:name="com.example.grocery_store.ui.dashboards.DashboardScreen"
        android:label="@string/groceries"
        tools:layout="@layout/fragment_dashboard_screen">
        <argument
            android:name="userId"
            app:argType="integer" />
        <action
            android:id="@+id/action_dashboardScreen_to_addItemsCartFragment"
            app:destination="@id/addItemsCartFragment" />
        <action
            android:id="@+id/action_dashboardScreen_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/addItemsCartFragment"
        android:name="com.example.grocery_store.ui.dashboards.MyCartFragment"
        android:label="@string/my_cart"
        tools:layout="@layout/fragment_add_items_cart">
        <action
            android:id="@+id/action_addItemsCartFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>
    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.example.grocery_store.ui.dashboards.PaymentFragment"
        android:label="@string/payment"
        tools:layout="@layout/fragment_payment">
        <action
            android:id="@+id/action_paymentFragment_to_dashboardScreen"
            app:destination="@id/dashboardScreen" />
        <argument
            android:name="userId"
            app:argType="integer" />
        <argument
            android:name="totalAmount"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.grocery_store.ui.dashboards.HistoryFragment"
        android:label="@string/history_items"
        tools:layout="@layout/fragment_history" />
</navigation>