<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/checkout_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/chip_color_bg"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkout"
            android:textColor="@color/text_color"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/checkout_cancel"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_cancel"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView"
            app:tint="@color/text_color" />

        <TextView
            android:id="@+id/total_item_count_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/total_items"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/total_item_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/dummy_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/total_item_count_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/total_item_count_tv" />

        <TextView
            android:id="@+id/total_item_price_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/total_price"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/total_item_count_tv"
            app:layout_constraintTop_toBottomOf="@+id/total_item_count_tv" />

        <TextView
            android:id="@+id/total_item_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/dummy_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/total_item_price_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/total_item_price_tv" />

        <TextView
            android:id="@+id/total_item_gst_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/gst"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/total_item_price_tv"
            app:layout_constraintTop_toBottomOf="@+id/total_item_price_tv" />

        <TextView
            android:id="@+id/total_item_gst_price_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/dummy_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/total_item_gst_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/total_item_gst_tv" />

        <View
            android:id="@+id/break_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:alpha=".25"
            android:background="@color/text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_item_gst_tv" />

        <TextView
            android:id="@+id/final_item_gst_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/amount_to_be_paid"
            android:textColor="@color/text_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/total_item_price_tv"
            app:layout_constraintTop_toBottomOf="@+id/break_line" />

        <TextView
            android:id="@+id/final_item_gst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/dummy_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/final_item_gst_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/final_item_gst_tv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/payment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/navy_blue_color"
            android:padding="12dp"
            android:text="@string/go_to_payment"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/final_item_gst_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        style="?android:attr/progressBarStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:indeterminateDrawable="@drawable/circular_progress_bar"
        android:indeterminateDuration="@android:integer/config_longAnimTime"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>